# ChangeLog for app-misc/rainlendar-lite
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Feb 2008; Jakub Moc <jakub@gentoo.org> rainlendar-lite-2.3.ebuild:
  Nuke loads of dependencies already implied by gtk+

  15 Feb 2008; (Tommy[D]) tommy100@gmx.de rainlendar-lite-2.3.ebuild:
  Fix typo

  06 Feb 2008; (Tommy[D]) tommy100@gmx.de rainlendar-lite-2.3.ebuild:
  spaces > tabs

  06 Feb 2008; Michał Kiedrowicz (esqualante) <esqualante@o2.pl>
  rainlendar-lite-2.3.ebuild:
  Fixed dependencies for amd64.

  05 Feb 2008; Markus Ullmann <jokey@gentoo.org> rainlendar-lite-2.3:
  Works on amd64

  17 Jan 2008; Markus Ullmann <jokey@gentoo.org> rainlendar-lite-2.3:
  Fix install position for the binary

  15 Jan 2008; Markus Ullmann <jokey@gentoo.org>
  +rainlendar-lite-2.3.ebuild, +metadata.xml:
  Initial import for bug #154664 thanks to Arne Janbu and Yaroslav
  Isakov for ebuild contributions
