@@ -1,4 +1,4 @@
 DIST Rainlendar-Lite-2.3.tar.bz2 4827798 RMD160 b26aa89733d08ff6925f080c154a4d0d530b1885 SHA1 8bb66ce6b62426a1ee9ba81f2329931ce380eda1 SHA256 5fa1fe6eaded23c2df588359b328709afbb8756f938b2c7ab404e82d102c240f
-EBUILD rainlendar-lite-2.3.ebuild 1195 RMD160 df28853837fafbfaedd6f6d93d7b34cc5f604aae SHA1 7f86e5545040e7a9b79f6fbd3e08ef597e22d6a3 SHA256 994ff255df0a68ddc8f6c78d7cbd69ad02b1b70e95d25a43bcae3a51159507cf
-MISC ChangeLog 943 RMD160 3095df546ca3d49365908ad159e73e5b52ffd642 SHA1 2f2561f669ac2566dd1d098b1982ed093c276cb7 SHA256 2028a62217551943a2d3b9e852326438328b80be82effdb47c38ef7ced6bbb44
+EBUILD rainlendar-lite-2.3.ebuild 1175 RMD160 6e75c2a985ff8754219ae1556b606ecce063cc5e SHA1 95a1d0c91243f7a96804fbb6f9c85fe40290af68 SHA256 fb0f144f7dc45d53d41e89b654235c927138566df3506a1eefac3aaf798fc51e
+MISC ChangeLog 1083 RMD160 0258c44a378acabd676205c163fdc56c30f695fc SHA1 4c0fd0f10ffb0b237276b1caf6367f13d3e228a7 SHA256 26d1432ce810ccfa7c997c5dc62e1a210f1ca10f029641c7279c099693a3cfe7
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
